# Physical_AI_book

./: .gitignore  README.md
.specify/memory/: constitution.md
backend/: .env  README.md  agent_service.py  main.py  models.py  pyproject.toml  qdrant_tool.py  requirements.txt
backend/src/: main.py
backend/tests/: test_agent_service.py  test_main.py
history/prompts/001-ros2-module1/: 1-create-ros2-module-1-specification.spec.prompt.md  2-create-ros2-module-1-plan.plan.prompt.md  3-generate-ros2-module-1-tasks.tasks.prompt.md  4-implement-ros-2-module-1.green.prompt.md  5-clarify-ros-2-module-1-spec.spec.prompt.md  6-update-ros-2-module-1-plan.plan.prompt.md  7-update-ros-2-module-1-tasks.tasks.prompt.md  8-complete-ros-2-module-1-implementation.green.prompt.md
history/prompts/002-digital-twin-module/: 10-plan-module-2-the-digital-twin.plan.prompt.md  11-generate-tasks-for-module-2.tasks.prompt.md  (+2 more)
my_book/: .npmignore  docusaurus.config.js  package-lock.json  sidebars.js
specs/001-docusaurus-ui-upgrade/: research.md  spec.md
specs/001-ros2-module1/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-digital-twin-module/: plan.md  spec.md  tasks.md
specs/003-ai-robot-brain-isaac/: plan.md  spec.md  tasks.md
specs/004-vla-robot-brain/: data-model.md  plan.md  spec.md  tasks.md
specs/012-rag-agent-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-rag-ingestion-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/main/: plan.md
(+51 files in other folders)
